[gd_scene load_steps=3 format=3 uid="uid://da77antahp6oi"]

[ext_resource type="Script" path="res://view/hud/combo_popup.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popup"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85, 0.7, 0.35, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 4

[node name="ComboPopup" type="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 300.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_popup")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ComboNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Full House (x7.0)"
horizontal_alignment = 1

[node name="ResourcesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
